# phishark

./: LICENSE  README.md  phishark.py
data/: pyproject.toml
