[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "PhishArk"
version = "1.2.1"
readme = "README.md"
license = "MIT"
repository = "https://gitlab.com/arpitxd/phishark"
include = ["README.md", "LICENSE"]
description = "Advanced Python phishing toolkit"
authors = ["arpitxd <dhameliyaav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.3.0"
rich = "^13.0.0"
beautifulsoup4 = "^4.12"

[tool.poetry.scripts]
phishark = "phishark:main"

[build-system.sdist]
formats = ["gztar"]

[build-system.bdist_wheel]
universal = false
